# SKOOL-INGEST

./: .env.example  .gitignore  FB_Lead_Qualification_Architecture.md  README.md  REFACTOR-AUDIT-2026-07-18.md  TRANSCRIPT_LOL_R2_PLAYBOOK.md  pyproject.toml  run.sh
deploy/: engine.launchd.plist  n8n.launchd.plist  run_engine.sh  run_n8n.sh
docs/plans/: 2026-07-04-001-feat-agent-core-go-live-plan.md  (+5 more)
fb_leads/: __init__.py  __main__.py  draft_report.py  drafts.py  extract.py  ingest.py  models.py  post_templates.py  report.py  scoring.py  suggest.py
manifest/: code-appendix.md  orchestrator-context.md  skool_videos.csv
scripts/: _extract_token.py  build_claude_bundle.py  build_code_appendix.py  build_video_index.py  engine_smoke.py  install_playwright.sh  local_ingest.py  media_archive.py  n8n_stage_a_smoke.py  probe_cookie.py  refresh_and_split.py  skool_login.py  skool_playwright_crawl.py  tlol_retry_mp3.sh  tlol_retry_pubdev.sh
skool_ingest/: __init__.py  __main__.py  fanout.py  manifest.py  skool_crawl.py  skool_crawl_notte.py  transcript_lol.py  vault.py
src/: main.py
tests/: test_agent_core.py  test_crawl_parsing.py  test_fb_leads_draft_report.py  test_fb_leads_draft_report_provenance.py  test_fb_leads_drafts.py  test_fb_leads_extract.py  test_fb_leads_ingest.py  test_fb_leads_models.py  test_fb_leads_report.py  test_fb_leads_scoring.py  test_fb_leads_suggest.py  test_local_ingest.py  test_media_archive.py  test_n8n_stage_a_smoke.py  test_notte_backend.py  test_run_n8n_dotenv.py  test_skool_login.py  test_smoke.py  test_transcript_lol.py  test_vault.py
(+14 files in other folders)
