[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skool-ingest"
version = "0.1.0"
description = "Walk Skool classrooms, extract video URLs, and fan them out to transcript.lol for URL-to-transcript conversion."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "notte-sdk>=1.0",  # optional in practice; gated by is_available() in skool_crawl_notte
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]
login = ["playwright>=1.40"]  # only needed for scripts/skool_login.py

[tool.setuptools.packages.find]
include = ["skool_ingest*"]

[tool.ruff]
line-length = 100
target-version = "py311"
